# 3DObjectTracking

ICG/: CMakeLists.txt  package.xml  readme.md
ICG/examples/: CMakeLists.txt  run_on_camera_sequence_RS.cpp  run_on_camera_topic.cpp
ICG/examples/digestive/: digestive.yaml
ICG/include/icg/: detector.h  manual_detector.h  ros_camera.h  static_detector.h  tracker.h
ICG/src/: CMakeLists.txt  realsense_camera.cpp  ros_camera.cpp  static_detector.cpp  tracker.cpp
SRT3D/: CMakeLists.txt
SRT3D/examples/: CMakeLists.txt  run_on_camera_sequence_RS.cpp
SRT3D/include/srt3d/: camera.h  loader_camera.h  realsense_camera.h
SRT3D/src/: CMakeLists.txt  loader_camera.cpp  realsense_camera.cpp
